# Tubes3_StimaSukses

./: .env  .gitignore  README.md  Resume.csv  debug_connection.py  detect_mysql_port.py  docker-compose.yml  generate_resume_csv.py  main.py  pyproject.toml  requirements.txt  resume_seeder.py  setup_database.py  setup_database.sql  setup_postgres.py  start_mysql.sh  start_postgres.sh
database/init/: 02_init_permissions.sh
src/: generate_csv.py  kaggle_dataset_path.txt  main.py  migrate_data.py  pyproject.toml
src/algorithm/: __init__.py  aho_corasick.py  bm.py  kmp.py  levenshtein.py
src/algorithms/: aho_corasick.py
src/controller/: __init__.py  cv.py  real_search.py  search.py
src/data/: organization_info.json
src/database/: __init__.py  config.py  config_simple.py  mock_repository.py  models.py  mysql_config.py  postgres_config.py  real_pdf_extractor.py  real_repository.py  repo.py  repository.py
src/ui/: __init__.py  main_window.py  main_window_real.py  results_panel.py  search_panel.py  summary_view.py
src/utils/: __init__.py  database_util.py  encryption.py  pdf_extractor.py  regex_extractor.py  test_mode.py  timer.py
testing/: debug_connection.py  resume_seeder.py  setup_database.py  test_db.py
