[project]
name = "ats-cv-search"
version = "1.0.0"
description = "ATS CV Search Application - Tubes 3 Stima with Pattern Matching & Regex Extraction"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "PyQt5>=5.15.0",
    "mysql-connector-python>=8.0.0",
    "PyPDF2>=3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.hatch.build]
include = [
    "src/**/*.py",
    "main.py",
    "detect_mysql_port.py",
    "setup_database.py",
    "test_db.py",
    "README.md",
    "pyproject.toml",
]
exclude = [
    "*.pyc",
    "__pycache__",
    ".git",
    ".venv",
    "data/*",
    "doc/*",
    ".env",
]

[tool.black]
line-length = 100
target-version = ['py38']

[tool.flake8]
max-line-length = 100
extend-ignore = ['E203', 'W503']